# nom-nom

./: .env.example  .gitignore  AGENTS.md  CLA.md  CONTRIBUTING.md  Cargo.toml  Dioxus.toml  GOALS.md  README.md  package.json  tailwind.config.js
docs/: CONFIGURATION.md  SECURITY.md  STYLING.md
src/: lib.rs  main.rs
src/components/: footer.rs  mod.rs  navbar.rs  theme_toggle.rs
src/pages/: home.rs  larder.rs  mod.rs  recipes.rs
tests/: theme_toggle_tests.rs
